--- a/languages/wp-file-get-contents.pot
+++ b/languages/wp-file-get-contents.pot
@@ -18,7 +18,7 @@ msgid "JSM's file_get_contents() Shortcode"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "http://surniaulula.com/extend/plugins/wp-file-get-contents/"
+msgid "https://surniaulula.com/extend/plugins/wp-file-get-contents/"
 msgstr ""
 
 #. Description of the plugin/theme
@@ -30,5 +30,5 @@ msgid "JS Morisset"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "http://surniaulula.com/"
+msgid "https://surniaulula.com/"
 msgstr ""
