--- a/languages/wp-file-get-contents.pot
+++ b/languages/wp-file-get-contents.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the JSM's file_get_contents() Shortcode package.
 msgid ""
 msgstr ""
-"Project-Id-Version: JSM's file_get_contents() Shortcode 2.1.0\n"
+"Project-Id-Version: JSM's file_get_contents() Shortcode 2.2.0-dev.1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-file-get-"
 "contents\n"
 "POT-Creation-Date: 2020-MO-DA HO:MI+ZONE\n"
