--- a/languages/wp-file-get-contents.pot
+++ b/languages/wp-file-get-contents.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the JSM's file_get_contents() Shortcode package.
 msgid ""
 msgstr ""
-"Project-Id-Version: JSM's file_get_contents() Shortcode 2.3.0-dev.4\n"
+"Project-Id-Version: JSM's file_get_contents() Shortcode 2.3.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-file-get-"
 "contents\n"
 "POT-Creation-Date: 2021-MO-DA HO:MI+ZONE\n"
@@ -12,6 +12,10 @@ msgstr ""
 "PO-Revision-Date: 2021-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+
+#: wp-file-get-contents.php:143
+msgid "%1$s or %2$s shortcode attribute missing."
+msgstr ""
 
 #. Plugin Name of the plugin/theme
 msgid "JSM's file_get_contents() Shortcode"
