--- a/languages/wp-file-get-contents.pot
+++ b/languages/wp-file-get-contents.pot
@@ -1,8 +1,8 @@
-# Copyright (C) 2023 JSM's file_get_contents() Shortcode
-# This file is distributed under the same license as the JSM's file_get_contents() Shortcode package.
+# Copyright (C) 2023 JSM file_get_contents() Shortcode
+# This file is distributed under the same license as the JSM file_get_contents() Shortcode package.
 msgid ""
 msgstr ""
-"Project-Id-Version: JSM's file_get_contents() Shortcode 2.7.0\n"
+"Project-Id-Version: JSM file_get_contents() Shortcode 2.7.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-file-get-"
 "contents\n"
 "POT-Creation-Date: 2023-MO-DA HO:MI+ZONE\n"
@@ -18,7 +18,7 @@ msgid "%1$s or %2$s shortcode attribute missing."
 msgstr ""
 
 #. Plugin Name of the plugin/theme
-msgid "JSM's file_get_contents() Shortcode"
+msgid "JSM file_get_contents() Shortcode"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
