--- a/languages/wp-file-get-contents.pot
+++ b/languages/wp-file-get-contents.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the JSM file_get_contents() Shortcode package.
 msgid ""
 msgstr ""
-"Project-Id-Version: JSM file_get_contents() Shortcode 2.7.0\n"
+"Project-Id-Version: JSM file_get_contents() Shortcode 3.0.0-dev.1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-file-get-"
 "contents\n"
 "POT-Creation-Date: 2023-MO-DA HO:MI+ZONE\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
-#: wp-file-get-contents.php:143
+#: wp-file-get-contents.php:155
 msgid "%1$s or %2$s shortcode attribute missing."
 msgstr ""
 
